tests/typing/bad/testfile-underscore-3.go
package main

func f() int { a, _ := 1, 2; _ = 3; return 42 }
func main() {}
